<resources>
    <string name="app_name">Punjai</string>
    <string name="contact_to_punjai">Contact to PunJai</string>
    <string name="address">Address</string>
    <string name="our_location_on_googlemap">Our location on GoogleMap</string>
    <string name="telephone">Telephone</string>
    <string name="tel_number" translatable="false">089-293-1938</string>
    <string name="e_mail">E-mail</string>
    <string name="email_name" translatable="false">info@punjai.com</string>
    <string name="title_activity_maps">Map</string>
    <string name="language">Language</string>
    <string name="title_activity_ourplace">Map</string>
    <string name="Punjai_info">Punjai is a crowdsourcing platform that users can donate for events. This application is a channel for gathering foundations that need help and support by raising funds from people who need to support various activities and society. This application contains an information and donation sharing channel of all foundations which associate with Punjai. Donors can donate their money directly to the foundation so donors can make sure that the foundation receives their money. All of this can lead to the benefits of the application.</string>
    <string name="cyclone">UNICEF is ramping up its response for affected children and families to expand access to healthcare, water, sanitation and hygiene. UNICEF is providing vaccines, life-saving therapeutic food and other basic necessities to keep children alive. We are also supporting restoring essential public services, schools, healthcare and laying the groundwork for longer term recovery and development.</string>
    <string name="not_registered_sign_up_here">Not registered? Sign Up here</string>
    <string name="log_in">Log In</string>
    <string name="name_donate">Name</string>
    <string name="submit">Submit</string>
    <string name="donate_for_unicef">Donate for Unicef</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="support_children_affected_by_the_cyclones_in_southern_africa">Support children affected by the cyclones in Southern Africa</string>
    <string name="donate_donation">Donate</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Log in here</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirmation_letter">Confirmation Letter</string>
    <string name="project">Project</string>
    <string name="value">Value</string>
    <string name="name_recipe">Name</string>
    <string name="thank_you_for_your_donation">Thank you for your donation</string>
    <string name="back_to_home">Back to home</string>
    <string name="help_children_effected_by_cyclone">Help children affected by cyclone</string>
    <string name="contact_us">Contact us</string>
    <string name="current_donation_amount">Current Donation Amount</string>
    <string name="currentDonation_baht"> Baht</string>
    <string name="target">Target:</string>
    <string name="target_baht">1,000,000 Baht</string>
    <string name="detail">Detail</string>
    <string name="new_help_children_effected_by_cyclone">Help children effected by cyclone</string>
    <string name="logout">Log out</string>
    <string name="baht">Baht</string>
    <string name="name_donator">Name</string>
    <string name="donation_history">Donation History</string>
    <string name="amount_history">Amount</string>
    <string name="paymentmethod">PaymentMethod</string>
    <string name="Location_address">999/9 Floor.3 Pathumwan District Bangkok 10330</string>
    <string name="name_history">Name</string>
    <string name="donate_to_an_education_charity_in_thailand">Donate to an Education Charity in Thailand</string>
    <string name="detail_childrenDoanation">Children need to be shown that they have value in the world. By providing them with the resources they need, encouragement and a lot of love and guidance, children will learn they have value as human beings. The task of UNICEF is to address any and all impediments that prevent children from achieving their true potential.</string>
    <string name="topuc_ChildrenDonation">Donate to an Education Charity in Thailand</string>
    <string name="amount_donator">amount</string>
    <string name="method_donator">method</string>
<!--    <string name="name_donator_info">Name</string>-->
    <string name="payment_method_Donator">Payment Method</string>
    <string name="project_donator">Project</string>
    <string name="amount_donatorInfo">Amount</string>
    <string name="setting_settingFrag">Setting</string>
</resources>
