<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recipe">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/confirmation_letter"
        android:textColor="@android:color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="356dp"
        android:layout_height="433dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@+id/backhome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/project"
        android:fontFamily="@font/poppins"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/project"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Amount"
        android:fontFamily="@font/poppins"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Amount"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2" />

    <TextView
        android:id="@+id/Name_do"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/value"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/project"
        app:layout_constraintStart_toStartOf="@+id/project" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name_recipe"
        android:fontFamily="@font/poppins"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/Name_do"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2" />

    <TextView
        android:id="@+id/Amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="200dp"
        android:text="TextView"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/frameLayout2" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/thank_you_for_your_donation"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout2" />

    <TextView
        android:id="@+id/project"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/help_children_effected_by_cyclone"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/Amount"
        app:layout_constraintStart_toEndOf="@+id/textView18" />

    <Button
        android:id="@+id/backhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/back_to_home"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>